init: 基本环境配置

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-accelerate
-fastapi
-gradio==3.23
+torchvision==0.17.0 
+torchaudio==2.2.0
+torch==2.2.0
 httpx
 markdown2[all]
 nh3
@@ -8,16 +8,22 @@ prompt_toolkit>=3.0.0
 pydantic
 requests
 rich>=10.0.0
-sentencepiece
+transformers>=4.34.0
 tokenizers>=0.12.1
-transformers==4.28.1
+huggingface-hub<0.22.0
+peft
+accelerate==0.31.0
+sentencepiece
+fastapi
+gradio==3.23
 uvicorn
 datasets
 apache_beam
 omegaconf
-pytorch-lightning==1.8.4.post0
+pytorch-lightning>=1.8.4.post0
 webdataset
 einops
 ninja
-diffusers==0.20.2
-numpy==1.23.4
+diffusers>=0.20.2
+numpy==1.26.4
+basicsr
